# nixos-config

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .sops.yaml  Justfile  LICENSE  Makefile  README.adoc  default.nix  flake.nix  home.nix  images.toml  shell.nix  treefmt.toml  users.toml
.github/workflows/: automate-dotfiles-input-update.yml  automate-update.yml  build-devcontainers.yml  build.yml  check.yml  flakehub-push.yml  iso.yml  site.yml  update-firefox-addons.yml  update.yml
apps/: README.adoc
apps/fds-fetcher-flock/: .gitignore  CHANGELOG.md  README.adoc  go.mod  go.sum  main.go
apps/run-workflow-with-vm/: README.adoc  app.sh  configuration.nix  default.nix  meson.build  meson_options.txt
apps/run-workflow-with-vm/modules/home-manager/: default.nix
apps/run-workflow-with-vm/modules/nixos/: default.nix
configs/: README.adoc
configs/flake-parts/: bahaghari.nix  default.nix  dev.nix  disko.nix  flake-parts.nix  home-manager.nix  nixos.nix  nixvim.nix  packages.nix  setups.nix  templates.nix  wrapper-manager-fds.nix  wrapper-manager.nix
configs/nixos/: README.adoc
configs/nixvim/: README.adoc
core/: README.adoc  default.nix
devcontainers/: README.adoc  creatives.nix  default.nix  js-backend.nix  ruby-on-rails.nix  rust-backend.nix  typical-devenv.nix
docs/: Gemfile  LICENSE  README.adoc  default.nix  gemset.nix  go.mod  go.sum  shell.nix
docs/manpages/: footer.5  home-manager-header.adoc  nixos-header.adoc  nixvim-header.adoc  wrapper-manager-header.adoc
docs/website/: .gitignore  Gemfile  LICENSE  Makefile  gemset.nix  go.mod  go.sum  package.nix  shell.nix
hosts/: README.adoc
hosts/bootstrap/: README.adoc  default.nix
hosts/graphical-installer/: README.adoc  default.nix
hosts/ni/: README.adoc  default.nix  disko.nix  hardware-configuration.nix  host-key.pub
hosts/plover/: .terraform.lock.hcl  README.adoc  default.nix  hardware-configuration.nix  main.tf  versions.tf
hosts/void/: README.adoc  default.nix
hosts/winnowing/: default.nix
hosts/zilch/: README.adoc  default.nix  hardware-configuration.nix
lib/: README.adoc  builders.nix  data.nix  default.nix  env-builders.nix  flake-utils.nix  flake.nix  formats.nix  home-manager.nix  images.nix  math.nix  modules.nix  nixos.nix  nixvim.nix  options.nix  private.nix  sops.nix  sources.nix  trivial.nix  xdg.nix
lib/builders/: build-dconf-db.nix  build-docker-image.nix  build-fds-env.nix  default.nix
lib/env-specific/: home-manager.nix  nixos.nix  nixvim.nix  sops.nix  wrapper-manager.nix
lib/extras/: extend-lib.nix  home-manager-set.nix  images.nix  nixos-set.nix  nixvim-set.nix
lib/fetchers/: default.nix
lib/utils/: nixos.nix
modules/: README.adoc  agenix.nix  archiving.nix  default.nix  desktop.nix  dev.nix  editors.nix  users.nix
modules/bahaghari/: README.adoc
modules/desktop/: audio.nix  browsers.nix  cad.nix  default.nix  files.nix  fonts.nix  graphics.nix  multimedia.nix  music.nix  research.nix  wine.nix
modules/dev/: android.nix  base.nix  cc.nix  data.nix  default.nix  documentation.nix  gamedev.nix  go.nix  java.nix  javascript.nix  lisp.nix  math.nix  perl.nix  python.nix  rust.nix  vcs.nix  web.nix
modules/drivers/: default.nix  veikk.nix
modules/editors/: default.nix  emacs.nix  neovim.nix  vscode.nix
modules/flake-parts/: default.nix  deploy-rs-nodes.nix  devcontainers.nix  devpackages.nix  disko-configurations.nix  home-configurations.nix  home-modules.nix  images.nix  nixvim-configurations.nix  nixvim-modules.nix  wrapper-manager-packages.nix
modules/hardware/: audio.nix  default.nix  veikk.nix
modules/home-manager/: alacritty.nix  bleachbit.nix  default.nix  desktop.nix  dev.nix  editors.nix  i18n.nix  research.nix  tinted-theming.nix
modules/nixos/: README.adoc  agenix.nix  archiving.nix  default.nix  desktop.nix  dev.nix  editors.nix  tinted-theming.nix  users.nix
modules/nixos-generators/: install-iso-graphical.nix
modules/nixos/workflows/mosey-branch/config/desktop-session/: README.adoc  core-service.desktop.in  core-service.service.in  core-service.target.in  default.nix  meson.build  meson_options.txt  mosey-branch.bin.in  mosey-branch.desktop  mosey-branch.desktop.in  mosey-branch.gnome-session.in  mosey-branch.service  mosey-branch.session  mosey-branch.session.conf.in  mosey-branch.systemd-conf.in  mosey-branch.target
modules/nixvim/: default.nix  keyunmaps.nix
modules/services/: default.nix  recoll.nix  unison.nix
modules/shell/: archiving.nix  base.nix  default.nix  git.nix  lf.nix  zsh.nix
modules/themes/: default.nix
modules/wrapper-manager/: dconf.nix  (+3 more)
nix/: default.nix  flake.nix
overlays/: default.nix
pkgs/: README.adoc  artem.nix  auto-editor.nix  blueprint-compiler.nix  butler.nix  clidle.nix  default.nix  devdocs-desktop.nix  distant.nix  doggo.nix  emulsion-palette.nix  freerct.nix  gnome-extension-manager.nix  gnome-search-provider-browser-tabs.nix  gnome-search-provider-recoll.nix  gnome-shell-extension-burn-my-windows.nix  gnome-shell-extension-desktop-cube.nix  gnome-shell-extension-fly-pie.nix  gnome-shell-extension-pop-shell.nix  gol-c.nix  guile-config.nix  guile-hall.nix  guix-binary.nix  hoppscotch-cli.nix  hush-shell.nix  ictree.nix  junction.nix  libcs50.nix  llama.nix  moac.nix  mopidy-beets.nix  mopidy-funkwhale.nix  mopidy-internetarchive.nix  neo.nix  photon-rss.nix  pop-launcher-plugin-duckduckgo-bangs.nix  pop-launcher.nix  ratt.nix  rnote.nix  segno.nix  (+7 more)
scripts/: generate-and-upload-gce-image
secrets/: README.adoc  backup-archive.yaml  multimedia-archive.yaml  secrets.nix
setups/: home-manager.nix  nixos.nix
shells/: README.adoc  cloud.nix  creatives.nix  default.nix  dotnet.nix  flatpak.nix  gnome.nix  gnu.nix  go.nix  gtk.nix  guile.nix  hugo.nix  latex.nix  lua.nix  nix.nix  nodejs.nix  rust.nix  tic-80.nix
templates/: README.adoc
templates/basic-nix-cpp-app/src/: main.cc  meson.build
terraform/: .terraform.lock.hcl  dns.tf  servers.tf  ssh-keys.tf  tailscale.tf  version.tf
tests/: README.adoc  default.nix  utils.nix
users/: README.adoc
(+1115 files in other folders)
