option('service_script',
  type: 'string',
  value: 'Hyprland',
  description: 'Executable for the main session script.'
)

option('polkit_script',
  type: 'string',
  value: 'polkit',
  description: 'Executable and its arguments of the polkit daemon.'
)

option('ags_script',
  type: 'string',
  value: 'ags',
  description: 'Executable and its arguments of the AGS widget system.'
)
